Adding modifications for currency

--- a/templates/partials/character/tab-inventory.hbs
+++ b/templates/partials/character/tab-inventory.hbs
@@ -10,6 +10,7 @@
 </div>
 <div class="flex">
     <div class="weapon-section">
+        <h3>{{localize "WITCHER.Inventory.Purse"}}</h3>
         <div class="flex">
             <div class="currency">
                 <label>{{localize "WITCHER.Currency.bizant"}}</label>
@@ -45,6 +46,82 @@
                 <label>{{localize "WITCHER.Currency.falsecoin"}}</label>
                 <input class="small-medium" name="system.currency.falsecoin" type="number"
                     value="{{system.currency.falsecoin}}" placeholder="0" data-dtype="Number" />
+            </div>
+        </div>
+        <h3>{{localize "WITCHER.Inventory.Stolen"}}</h3>
+        <div class="flex">
+            <div class="currency">
+                <label>{{localize "WITCHER.Currency.bizant"}}</label>
+                <input class="small-medium" name="system.stolen_currency.bizant" type="number"
+                    value="{{system.stolen_currency.bizant}}" placeholder="0" data-dtype="Number" />
+            </div>
+            <div class="currency">
+                <label>{{localize "WITCHER.Currency.ducat"}}</label>
+                <input class="small-medium" name="system.stolen_currency.ducat" type="number" value="{{system.stolen_currency.ducat}}"
+                    placeholder="0" data-dtype="Number" />
+            </div>
+            <div class="currency">
+                <label>{{localize "WITCHER.Currency.lintar"}}</label>
+                <input class="small-medium" name="system.stolen_currency.lintar" type="number"
+                    value="{{system.stolen_currency.lintar}}" placeholder="0" data-dtype="Number" />
+            </div>
+            <div class="currency">
+                <label>{{localize "WITCHER.Currency.floren"}}</label>
+                <input class="small-medium" name="system.stolen_currency.floren" type="number"
+                    value="{{system.stolen_currency.floren}}" placeholder="0" data-dtype="Number" />
+            </div>
+            <div class="currency">
+                <label>{{localize "WITCHER.Currency.crown"}}</label>
+                <input class="small-medium" name="system.stolen_currency.crown" type="number" value="{{system.stolen_currency.crown}}"
+                    placeholder="0" data-dtype="Number" />
+            </div>
+            <div class="currency">
+                <label>{{localize "WITCHER.Currency.oren"}}</label>
+                <input class="small-medium" name="system.stolen_currency.oren" type="number" value="{{system.stolen_currency.oren}}"
+                    placeholder="0" data-dtype="Number" />
+            </div>
+            <div class="currency">
+                <label>{{localize "WITCHER.Currency.falsecoin"}}</label>
+                <input class="small-medium" name="system.stolen_currency.falsecoin" type="number"
+                    value="{{system.stolen_currency.falsecoin}}" placeholder="0" data-dtype="Number" />
+            </div>
+        </div>
+        <h3>{{localize "WITCHER.Inventory.Debt"}}</h3>
+        <div class="flex">
+            <div class="currency">
+                <label>{{localize "WITCHER.Currency.bizant"}}</label>
+                <input class="small-medium" name="system.debt_currency.bizant" type="number"
+                    value="{{system.debt_currency.bizant}}" placeholder="0" data-dtype="Number" />
+            </div>
+            <div class="currency">
+                <label>{{localize "WITCHER.Currency.ducat"}}</label>
+                <input class="small-medium" name="system.debt_currency.ducat" type="number" value="{{system.debt_currency.ducat}}"
+                    placeholder="0" data-dtype="Number" />
+            </div>
+            <div class="currency">
+                <label>{{localize "WITCHER.Currency.lintar"}}</label>
+                <input class="small-medium" name="system.debt_currency.lintar" type="number"
+                    value="{{system.debt_currency.lintar}}" placeholder="0" data-dtype="Number" />
+            </div>
+            <div class="currency">
+                <label>{{localize "WITCHER.Currency.floren"}}</label>
+                <input class="small-medium" name="system.debt_currency.floren" type="number"
+                    value="{{system.debt_currency.floren}}" placeholder="0" data-dtype="Number" />
+            </div>
+            <div class="currency">
+                <label>{{localize "WITCHER.Currency.crown"}}</label>
+                <input class="small-medium" name="system.debt_currency.crown" type="number" value="{{system.debt_currency.crown}}"
+                    placeholder="0" data-dtype="Number" />
+            </div>
+            <div class="currency">
+                <label>{{localize "WITCHER.Currency.oren"}}</label>
+                <input class="small-medium" name="system.debt_currency.oren" type="number" value="{{system.debt_currency.oren}}"
+                    placeholder="0" data-dtype="Number" />
+            </div>
+            <div class="currency">
+                <label>{{localize "WITCHER.Currency.falsecoin"}}</label>
+                <input class="small-medium" name="system.debt_currency.falsecoin" type="number"
+                    value="{{system.debt_currency.falsecoin}}" placeholder="0" data-dtype="Number" />
             </div>
         </div>
 
